fix: plugin info for python not centered on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -736,6 +736,7 @@
     flex-direction: column !important;
     align-items: center !important;
     text-align: center;
+    width: 100%;
   }
 
   .plugin-header-inner > div {
